objects/CSD_Sales_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Running_Date__c</fullName>
        <description>Indicate whether the snapshot batch has been failed or not</description>
        <label>Batch Running Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Region__c</fullName>
        <description>Store the billing region</description>
        <label>Billing Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to migrate Channel Forecast from JDA</description>
        <label>Channel Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Forecast_Amount__c</fullName>
        <label>DC Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Forecast_Price__c</fullName>
        <label>DC Forecast Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Forecast_Quantity__c</fullName>
        <label>DC Forecast Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <formula>DATE( VALUE( Fiscal_Year__c ) , VALUE(Fiscal_Month__c) ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Plus_Month__c</fullName>
        <formula>Fiscal_Year__c &amp; CASE(Fiscal_Month__c, Text(1), LPAD(Text(1), 2, &apos;0&apos;), Text(2), LPAD(Text(2), 2, &apos;0&apos;), Text(3), LPAD(Text(3), 2, &apos;0&apos;), Text(4), LPAD(Text(4), 2, &apos;0&apos;), Text(5), LPAD(Text(5), 2, &apos;0&apos;), Text(6), LPAD(Text(6), 2, &apos;0&apos;), Text(7), LPAD(Text(7), 2, &apos;0&apos;), Text(8), LPAD(Text(8), 2, &apos;0&apos;), Text(9), LPAD(Text(9), 2, &apos;0&apos;), Text(10), Text(10), Text(11), Text(11), Text(12), Text(12), Text(0))</formula>
        <label>Fiscal Year Plus Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <description>Used to save the GPL Code</description>
        <label>GPL Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Family__c</fullName>
        <description>Used to save the GPL family</description>
        <label>GPL Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDA_Account_Number__c</fullName>
        <formula>Sold_To__r.Account_Number_JDA_bridge_format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDA Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDA_Region__c</fullName>
        <formula>CASE( Billing_Region__c, &apos;AMERICAS&apos;, &apos;1001&apos;, &apos;EMEA&apos;, &apos;1002&apos;, &apos;ASIA&apos;, &apos;1005&apos;, &apos;1099&apos;) &amp; &apos;-&apos; &amp; Billing_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDA_Type__c</fullName>
        <formula>IF(AND( NOT(ISBLANK(Sold_To_Number__c)), AND(NOT(ISBLANK(OEM__c)), NOT( OEM_ID__c = &apos;000&apos;) ), NOT(ISBLANK( Part__c )), ISPICKVAL( Samsung_Type__c, &apos;&apos;)), &apos;1&apos;, 
IF(AND( NOT(ISBLANK(Sold_To_Number__c)), AND(NOT(ISBLANK(OEM__c)), OEM_ID__c = &apos;000&apos; ), NOT(ISBLANK( Part__c )), ISPICKVAL( Samsung_Type__c, &apos;&apos;)), &apos;2&apos;, 
IF(AND( NOT(ISBLANK(Sold_To_Number__c)), NOT(ISBLANK(OEM__c)), NOT(ISBLANK( Part__c )), NOT(ISPICKVAL( Samsung_Type__c, &apos;&apos;))), &apos;3&apos;, 
IF(AND( NOT(ISBLANK(Sold_To_Number__c)), NOT(ISBLANK(OEM__c)), ISBLANK( Part__c ), NOT(OEM__r.Name = &apos;SAMSUNG&apos;), NOT( ISPICKVAL( Type__c , &apos;Non-OEMs&apos;))), &apos;4&apos;, 
IF(AND( NOT(ISBLANK(Sold_To_Number__c)), NOT(ISBLANK(OEM__c)), ISBLANK( Part__c ), ISPICKVAL( Type__c , &apos;Non-OEMs&apos;)), &apos;5&apos;, 
IF(AND( NOT(ISBLANK(Sold_To_Number__c)), ISBLANK(OEM__c), ISPICKVAL( Type__c, &apos;Rest-SoldTo&apos;), ISBLANK( Part__c )), &apos;6&apos;, &apos;&apos;) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Code__c</fullName>
        <formula>RIGHT(Sold_To_Number__c, 8) &amp; LEFT( Sold_To_Number__c , 4) &amp; IF( ISBLANK(OEM__r.OEM_ID__c),&quot;&quot;, &quot;_&quot; &amp; OEM__r.OEM_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_ID__c</fullName>
        <formula>OEM__r.OEM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OEM account</description>
        <label>OEM</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSD Sales Forecasts (OEM)</relationshipLabel>
        <relationshipName>CSD_OEM_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>CSD Sales Forecasts</relationshipLabel>
        <relationshipName>CSD_Sales_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_10_Month_Forecast__c</fullName>
        <description>Used to snapshot the forecast from previous -10 month.</description>
        <label>Previous -10 Month Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_10_Month_Quantity__c</fullName>
        <description>Used to snapshot the quantity from previous -10 month</description>
        <label>Previous -10 Month Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_11_Month_Forecast__c</fullName>
        <description>Used to snapshot the forecast from previous -11 month.</description>
        <label>Previous  -11 Month Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_11_Month_Quantity__c</fullName>
        <description>Used to snapshot the quantity from previous -11 month</description>
        <label>Previous -11 Month Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_1_Month_Forecast__c</fullName>
        <description>Used to snapshot the forecast from previous -1 month.</description>
        <label>Previous  -1 Month Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_1_Month_Quantity__c</fullName>
        <description>Used to snapshot the quantity from previous -1 month</description>
        <label>Previous -1 Month Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Forecast__c</fullName>
        <description>Used to snapshot the forecast from previous month.</description>
        <label>Previous Month Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Quantity__c</fullName>
        <label>Previous Month Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rest_Parts_Forecast__c</fullName>
        <label>Rest Parts Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rest_SoldTo_Forecast__c</fullName>
        <label>Rest SoldTo Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sale_Territory__c</fullName>
        <label>Sale Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Samsung_Type__c</fullName>
        <description>only Samsung view</description>
        <label>Samsung Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Part</fullName>
                </value>
                <value>
                    <fullName>Non SoldTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>LEFT( Sold_To_Number__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <label>Sold To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Number__c</fullName>
        <label>Sold To Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSD Sales Forecasts</relationshipLabel>
        <relationshipName>Sold_To_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Forecast__c</fullName>
        <description>Only for type “OEM”</description>
        <label>Total Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Non-OEMs</fullName>
                </value>
                <value>
                    <fullName>Part</fullName>
                </value>
                <value>
                    <fullName>Sold-To</fullName>
                </value>
                <value>
                    <fullName>Rest-SoldTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSD Sales Forecast</label>
    <nameField>
        <label>CSD Sales Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSD Sales Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>